# Embedded_Linux

./: README.md  ReadMe.md  bash3.sh  exam_script.sh  task1.sh  task5.sh
binary _search_task/: binary.c  binary.out  binary.sh
calculator_lib_task/: CMakeLists.txt  main.c  main.elf
calculator_lib_task/dynamic_link/: div.c
calculator_lib_task/header/: add.h  div.h  mult.h  sub.h
calculator_lib_task/implementations/: CMakeLists.txt  add.c  mult.c  sub.c
task4/: README.md  main.c
task4/headers/: Bit_utils.h  DIO.h  STD_types.h
task4/source_files/: DIO.c  PORT.c  a.out
